WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122829
Emphasis marks has wrong color.
https://bugs.webkit.org/show_bug.cgi?id=122829
Summary
Emphasis marks has wrong color.
peavo
Reported
2013-10-15 07:05:01 PDT
When styling text with emphasis marks and setting color, the specified color is not applied.
Attachments
Patch
(5.39 KB, patch)
2013-10-15 07:23 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-cq-01 for mac-mountainlion
(505.61 KB, application/zip)
2013-10-15 10:01 PDT
,
WebKit Commit Bot
no flags
Details
Archive of layout-test-results from webkit-ews-03 for mac-mountainlion
(524.79 KB, application/zip)
2013-10-15 11:33 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-05 for mac-mountainlion
(525.50 KB, application/zip)
2013-10-15 12:33 PDT
,
Build Bot
no flags
Details
Patch
(5.23 KB, patch)
2013-10-16 05:06 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2013-10-15 07:23:27 PDT
Created
attachment 214256
[details]
Patch
Antti Koivisto
Comment 2
2013-10-15 08:44:10 PDT
Hmm did I actually accidentally fix text-emhpasis-color? Emphasis marks seems to be drawn using the stroke colour. With this patch the color has not effect.
Antti Koivisto
Comment 3
2013-10-15 09:18:29 PDT
Comment on
attachment 214256
[details]
Patch Nope, I'm wrong. fast/text/emphasis.html clearly shows this is correct. r=me, good spotting!
WebKit Commit Bot
Comment 4
2013-10-15 10:01:01 PDT
Comment on
attachment 214256
[details]
Patch Rejecting
attachment 214256
[details]
from commit-queue. New failing tests: fast/text/text-emphasis.html Full output:
http://webkit-queues.appspot.com/results/4100070
WebKit Commit Bot
Comment 5
2013-10-15 10:01:03 PDT
Created
attachment 214277
[details]
Archive of layout-test-results from webkit-cq-01 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: webkit-cq-01 Port: mac-mountainlion Platform: Mac OS X 10.8.4
Build Bot
Comment 6
2013-10-15 11:33:42 PDT
Comment on
attachment 214256
[details]
Patch
Attachment 214256
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/4111008
New failing tests: fast/text/text-emphasis.html
Build Bot
Comment 7
2013-10-15 11:33:44 PDT
Created
attachment 214286
[details]
Archive of layout-test-results from webkit-ews-03 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-03 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 8
2013-10-15 12:33:32 PDT
Comment on
attachment 214256
[details]
Patch
Attachment 214256
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/4103013
New failing tests: fast/text/text-emphasis.html
Build Bot
Comment 9
2013-10-15 12:33:34 PDT
Created
attachment 214293
[details]
Archive of layout-test-results from webkit-ews-05 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-05 Port: mac-mountainlion Platform: Mac OS X 10.8.5
peavo
Comment 10
2013-10-16 05:06:18 PDT
Created
attachment 214356
[details]
Patch
peavo
Comment 11
2013-10-16 05:08:09 PDT
Updated patch with new tests, which will hopefully not fail ;)
WebKit Commit Bot
Comment 12
2013-10-16 09:56:09 PDT
Comment on
attachment 214356
[details]
Patch Clearing flags on attachment: 214356 Committed
r157518
: <
http://trac.webkit.org/changeset/157518
>
WebKit Commit Bot
Comment 13
2013-10-16 09:56:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug