Emphasis marks has wrong color. https://bugs.webkit.org/show_bug.cgi?id=122829

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-10-16
Reviewed by Antti Koivisto.

Source/WebCore:

Tests: fast/text/text-emphasis.html.
       fast/text/text-emphasis-expected.html.

Emphasis color should be set as fill color, not stroke color.

* rendering/TextPaintStyle.cpp:
(WebCore::updateGraphicsContext):
* rendering/TextPaintStyle.h:

LayoutTests:

* fast/text/text-emphasis-expected.html: Added.
* fast/text/text-emphasis.html: Added.

Canonical link: https://commits.webkit.org/140981@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157518 268f45cc-cd09-0410-ab3c-d52691b4dbfc